package storage

var schema = `
CREATE TABLE IF NOT EXISTS abi (
	id SERIAL PRIMARY KEY,
	name TEXT NOT NULL,
	type TEXT NOT NULL,
	anonymous BOOLEAN NOT NULL
);

CREATE TABLE IF NOT EXISTS input (
	id SERIAL PRIMARY KEY,
	indexed BOOLEAN NOT NULL,
	internal_type TEXT NOT NULL,
	name TEXT NOT NULL,
	type TEXT NOT NULL,
	abi_id INTEGER NOT NULL,
	FOREIGN KEY (abi_id) REFERENCES abi (id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS event (
	id SERIAL PRIMARY KEY,
	network TEXT NOT NULL,
	node_url TEXT NOT NULL,
	address TEXT NOT NULL,
	latest_block_number BIGINT NOT NULL,
	abi_id INTEGER NOT NULL,
	status TEXT NOT NULL,
	error TEXT,
	created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
	updated_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
	FOREIGN KEY (abi_id) REFERENCES abi (id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS event_data (
	id SERIAL PRIMARY KEY,
	event_id INTEGER NOT NULL,
	tx TEXT NOT NULL,
	block_number BIGINT NOT NULL,
	data JSONB NOT NULL,
	created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
	FOREIGN KEY (event_id) REFERENCES event (id) ON DELETE CASCADE
);`
